Fix contributors